--- a/core/templates/core/changeorder_signature_form.html
+++ b/core/templates/core/changeorder_signature_form.html
@@ -233,10 +233,10 @@
                         
                         <div class="total-box">
                             <div class="label">Total Fixed Price</div>
-                            <div class="amount">{{ changeorder.total_amount|currency }}</div>
+                            <div class="amount">{{ changeorder.amount|currency }}</div>
                         </div>
                         
-                    {% elif changeorder.pricing_type == 'TM' %}
+                    {% elif changeorder.pricing_type == 'T_AND_M' %}
                         <div class="pricing-highlight time-materials">
                             <h3><i class="fas fa-clock me-2"></i>Pricing Type</h3>
                             <div class="pricing-type">
@@ -265,17 +265,17 @@
                             By signing this Time & Materials change order, you agree to be billed based on actual hours worked at the rates above, plus materials at cost plus the indicated markup.
                         </div>
                         
-                        {% if changeorder.total_amount %}
+                        {% if changeorder.amount %}
                             <div class="total-box">
                                 <div class="label">Estimated Amount (may vary)</div>
-                                <div class="amount">{{ changeorder.total_amount|currency }}</div>
+                                <div class="amount">{{ changeorder.amount|currency }}</div>
                             </div>
                         {% endif %}
                         
                     {% else %}
                         <div class="total-box">
                             <div class="label">Total Amount</div>
-                            <div class="amount">{{ changeorder.total_amount|currency }}</div>
+                            <div class="amount">{{ changeorder.amount|currency }}</div>
                         </div>
                     {% endif %}
                     
@@ -318,7 +318,7 @@
                             <div class="form-check mb-4">
                                 <input class="form-check-input" type="checkbox" id="agree-checkbox" required>
                                 <label class="form-check-label" for="agree-checkbox">
-                                    {% if changeorder.pricing_type == 'TM' %}
+                                    {% if changeorder.pricing_type == 'T_AND_M' %}
                                         I understand this is a TIME & MATERIALS change order and agree to the billing rates shown above.
                                     {% else %}
                                         I have reviewed and agree to this change order.
