--- a/core/templates/core/admin/dashboard_main.html
+++ b/core/templates/core/admin/dashboard_main.html
@@ -1,2 +1,2 @@
-{% extends "core/dashboard_admin.html" %}
-{# Legacy admin panel entrypoint now delegates to modern admin dashboard #}
+{% extends "core/dashboard_admin_clean.html" %}
+{# Admin panel entrypoint delegates to modern admin dashboard #}
