--- a/core/templates/core/daily_log_detail.html
+++ b/core/templates/core/daily_log_detail.html
@@ -307,23 +307,25 @@
                 </p>
               </div>
             </div>
+            {% endfor %}
+          </div>
 
-            <!-- Photo Modal -->
-            <div class="modal fade" id="photoModal{{ photo.id }}" tabindex="-1">
-              <div class="modal-dialog modal-xl modal-dialog-centered">
-                <div class="modal-content" style="border-radius: 16px; overflow: hidden;">
-                  <div class="modal-header border-0 bg-slate-900">
-                    <h5 class="modal-title text-white">{{ photo.caption|default:"Photo" }}</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
-                  </div>
-                  <div class="modal-body p-0 bg-slate-900 text-center">
-                    <img src="{{ photo.image.url }}" class="img-fluid" style="max-height: 80vh;">
-                  </div>
+          <!-- Photo Modals (outside the grid for proper z-index) -->
+          {% for photo in log.photos.all %}
+          <div class="modal fade" id="photoModal{{ photo.id }}" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-xl modal-dialog-centered">
+              <div class="modal-content" style="border-radius: 16px; overflow: hidden; border: none;">
+                <div class="modal-header border-0" style="background: #0f172a;">
+                  <h5 class="modal-title text-white">{{ photo.caption|default:"Photo" }}</h5>
+                  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body p-0 text-center" style="background: #0f172a;">
+                  <img src="{{ photo.image.url }}" class="img-fluid" style="max-height: 85vh; width: auto;">
                 </div>
               </div>
             </div>
-            {% endfor %}
           </div>
+          {% endfor %}
 
           <!-- Add More Photos Form -->
           {% if can_edit %}
